added download fn to download dataset

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -25,7 +25,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from huggingface_hub import hf_hub_download\n",
+    "\n",
+    "hf_hub_download(repo_id=\"pt-sk/Animal_Intrusion\", filename=\"animal instrusion dataset.zip\", repo_type=\"dataset\", local_dir=\"/content\")"
+   ]
   }
  ],
  "metadata": {
