added a trainer file for kaggle, added progress bar, modified testing file

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -60,6 +60,127 @@
     "# Display the plot\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: ConfigSpace in c:\\users\\sathish\\miniconda3\\envs\\dl\\lib\\site-packages (1.2.1)\n",
+      "Requirement already satisfied: numpy in c:\\users\\sathish\\miniconda3\\envs\\dl\\lib\\site-packages (from ConfigSpace) (1.26.4)\n",
+      "Requirement already satisfied: pyparsing in c:\\users\\sathish\\miniconda3\\envs\\dl\\lib\\site-packages (from ConfigSpace) (3.2.1)\n",
+      "Requirement already satisfied: scipy in c:\\users\\sathish\\miniconda3\\envs\\dl\\lib\\site-packages (from ConfigSpace) (1.13.1)\n",
+      "Requirement already satisfied: typing_extensions in c:\\users\\sathish\\miniconda3\\envs\\dl\\lib\\site-packages (from ConfigSpace) (4.12.2)\n",
+      "Requirement already satisfied: more_itertools in c:\\users\\sathish\\miniconda3\\envs\\dl\\lib\\site-packages (from ConfigSpace) (10.6.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install ConfigSpace"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sathish\\AppData\\Local\\Temp\\ipykernel_17472\\116361991.py:5: DeprecationWarning: Please use `space.add(hyperparameter)`\n",
+      "  cs.add_hyperparameter(CS.UniformFloatHyperparameter('lr0', lower=1e-4, upper=1e-3, log=True))\n",
+      "C:\\Users\\sathish\\AppData\\Local\\Temp\\ipykernel_17472\\116361991.py:6: DeprecationWarning: Please use `space.add(hyperparameter)`\n",
+      "  cs.add_hyperparameter(CS.UniformFloatHyperparameter('lrf', lower=0.01, upper=0.1, log=True))\n",
+      "C:\\Users\\sathish\\AppData\\Local\\Temp\\ipykernel_17472\\116361991.py:7: DeprecationWarning: Please use `space.add(hyperparameter)`\n",
+      "  cs.add_hyperparameter(CS.UniformIntegerHyperparameter('batch_size', lower=16, upper=128))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "UniformIntegerHyperparameter(name='batch_size', default_value=72, meta=None, size=113, lower=16, upper=128, log=False)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import ConfigSpace as CS\n",
+    "\n",
+    "# Create a configuration space\n",
+    "cs = CS.ConfigurationSpace()\n",
+    "cs.add_hyperparameter(CS.UniformFloatHyperparameter('lr0', lower=1e-4, upper=1e-3, log=True))\n",
+    "cs.add_hyperparameter(CS.UniformFloatHyperparameter('lrf', lower=0.01, upper=0.1, log=True))\n",
+    "cs.add_hyperparameter(CS.UniformFloatHyperparameter(\"weight_decay\", lower=1e-4, upper=1e-2, log=True)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Configuration space object:\n",
+       "  Hyperparameters:\n",
+       "    batch_size, Type: UniformInteger, Range: [16, 128], Default: 72\n",
+       "    lr0, Type: UniformFloat, Range: [0.0001, 0.001], Default: 0.000316227766, on log-scale\n",
+       "    lrf, Type: UniformFloat, Range: [0.01, 0.1], Default: 0.0316227766017, on log-scale"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import hpbandster.core.nameserver as hpns\n",
+    "import hpbandster.optimizers as hpo\n",
+    "\n",
+    "# Start a nameserver\n",
+    "run_id = 'bohb_ADIS'\n",
+    "NS = hpns.NameServer(run_id=run_id, working_directory='.')\n",
+    "ns_host, ns_port = NS.start()\n",
+    "\n",
+    "# Start a worker in the background\n",
+    "worker = MyWorker(nameserver=ns_host, nameserver_port=ns_port, run_id=run_id)\n",
+    "worker.run(background=True)\n",
+    "\n",
+    "# Configure BOHB\n",
+    "bohb = hpo.BOHB(\n",
+    "    configspace=cs,\n",
+    "    run_id=run_id,\n",
+    "    nameserver=ns_host,\n",
+    "    nameserver_port=ns_port,\n",
+    "    min_budget=1,    # Minimum epochs per evaluation\n",
+    "    max_budget=10,   # Maximum epochs per evaluation\n",
+    "    eta=5            # Reduction factor for successive halving (default is 3)\n",
+    ")\n",
+    "\n",
+    "# Run optimization (e.g., 4 iterations of HyperBand)\n",
+    "results = bohb.run(n_iterations=50)\n",
+    "\n",
+    "# Shut down\n",
+    "bohb.shutdown(shutdown_workers=True)\n",
+    "NS.shutdown()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bohb.get"
+   ]
   }
  ],
  "metadata": {
