--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,32 +2,109 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch"
+    "import torch\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "detections = torch.rand(10, 6)  # Random tensor to simulate detections\n",
+    "gt_boxes = torch.rand(5, 4)  # Random tensor to simulate ground truth boxes\n",
+    "gt_cls = torch.randint(0, 8, (5,))  # Random tensor to simulate ground truth classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([0.0707])"
+       "tensor(0.9631)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "detections = torch.rand(1)\n",
-    "detections"
+    "detections[:, 5].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target = np.ones(5)\n",
+    "prediction = np.array([0.1, 0.2, 0.8, 0.4, 0.7])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\sathish\\miniconda3\\envs\\dl\\lib\\site-packages\\sklearn\\metrics\\_ranking.py:379: UndefinedMetricWarning: Only one class is present in y_true. ROC AUC score is not defined in that case.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "nan"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# pass the target and prediction to the roc_auc_score function\n",
+    "from sklearn.metrics import roc_auc_score\n",
+    "roc_auc_score(target, prediction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'lr0': 0.00023758950881040344,\n",
+       " 'lrf': 0.1874268669033899,\n",
+       " 'weight_decay': 0.0004632250750446312,\n",
+       " 'warmup_momentum': 0.7510570837548393,\n",
+       " 'momentum': 0.8047785114774363}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "study = joblib.load('yolo11s bohb tune/optuna_study.pkl')\n",
+    "study.best_params"
    ]
   },
   {
