--- a/yolo11m bohb tune/yolo11m-bohb-tune.ipynb
+++ b/yolo11m bohb tune/yolo11m-bohb-tune.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1cb2c910",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
@@ -138,7 +138,7 @@
    "source": [
     "!pip install -U albumentations ultralytics optuna huggingface_hub\n",
     "!git clone https://github.com/sathishkumar67/ADIS.git\n",
-    "!mv /kaggle/working/ADIS/* /kaggle/working/"
+    "!mv /teamspace/studios/this_studio/ADIS/* /teamspace/studios/this_studio/"
    ]
   },
   {
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "16e83bb4",
    "metadata": {
     "execution": {
@@ -275,7 +275,7 @@
     "hf_hub_download(repo_id=REPO_ID, filename=FILENAME_IN_REPO, repo_type=REPO_TYPE, local_dir=LOCAL_DIR)\n",
     "unzip_file(DATASET_PATH, LOCAL_DIR)\n",
     "\n",
-    "os.remove(\"/kaggle/working/dataset.zip\")\n",
+    "os.remove(DATASET_PATH)\n",
     "print(\"deleted dataset.zip\")\n",
     "\n",
     "# Get the number of CPU cores\n",
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "635e5877",
    "metadata": {
     "execution": {
@@ -3212,7 +3212,7 @@
     "    objective,\n",
     "    n_trials=NUM_TRIALS)\n",
     "\n",
-    "joblib.dump(study, \"/kaggle/working/optuna_study.pkl\")"
+    "joblib.dump(study, f\"{LOCAL_DIR}/optuna_study.pkl\")"
    ]
   },
   {
@@ -3425,13 +3425,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_cf6956fa7a07469499099362e04ed153",
-       "max": 9569453176.0,
-       "min": 0.0,
+       "max": 9569453176,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_2ec315b0f1ac4f14b977a083b38558a2",
        "tabbable": null,
        "tooltip": null,
-       "value": 9569453176.0
+       "value": 9569453176
       }
      },
      "adb25b3c25e54d70987e97924d804dc2": {
