modified the cacheddataset

--- a/ssd_model_training.ipynb
+++ b/ssd_model_training.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
       "Collecting pip\n",
       "  Downloading pip-25.0.1-py3-none-any.whl.metadata (3.7 kB)\n",
       "Downloading pip-25.0.1-py3-none-any.whl (1.8 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m22.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m0:01\u001b[0m\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m21.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m0:01\u001b[0m\n",
       "\u001b[?25hInstalling collected packages: pip\n",
       "  Attempting uninstall: pip\n",
       "    Found existing installation: pip 24.1.2\n",
@@ -42,9 +42,7 @@
       "  Downloading torchmetrics-1.7.1-py3-none-any.whl.metadata (21 kB)\n",
       "Collecting lmdb\n",
       "  Downloading lmdb-1.6.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (1.1 kB)\n",
-      "Collecting PyTurboJPEG\n",
-      "  Downloading PyTurboJPEG-1.7.7.tar.gz (12 kB)\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+      "Requirement already satisfied: msgpack in /usr/local/lib/python3.10/dist-packages (1.1.0)\n",
       "Requirement already satisfied: opencv-python in /usr/local/lib/python3.10/dist-packages (4.10.0.84)\n",
       "Collecting opencv-python\n",
       "  Downloading opencv_python-4.11.0.86-cp37-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (20 kB)\n",
@@ -56,25 +54,8 @@
       "  Downloading albucore-0.0.23-py3-none-any.whl.metadata (5.3 kB)\n",
       "Requirement already satisfied: opencv-python-headless>=4.9.0.80 in /usr/local/lib/python3.10/dist-packages (from albumentations) (4.10.0.84)\n",
       "Requirement already satisfied: stringzilla>=3.10.4 in /usr/local/lib/python3.10/dist-packages (from albucore==0.0.23->albumentations) (3.11.1)\n",
-      "INFO: pip is looking at multiple versions of albucore to determine which version is compatible with other requirements. This could take a while.\n",
-      "Collecting albumentations\n",
-      "  Downloading albumentations-2.0.4-py3-none-any.whl.metadata (41 kB)\n",
-      "  Downloading albumentations-2.0.3-py3-none-any.whl.metadata (38 kB)\n",
-      "  Downloading albumentations-2.0.2-py3-none-any.whl.metadata (38 kB)\n",
-      "  Downloading albumentations-2.0.1-py3-none-any.whl.metadata (38 kB)\n",
-      "  Downloading albumentations-2.0.0-py3-none-any.whl.metadata (38 kB)\n",
-      "  Downloading albumentations-1.4.24-py3-none-any.whl.metadata (37 kB)\n",
-      "  Downloading albumentations-1.4.23-py3-none-any.whl.metadata (36 kB)\n",
-      "Collecting albucore==0.0.21 (from albumentations)\n",
-      "  Downloading albucore-0.0.21-py3-none-any.whl.metadata (5.3 kB)\n",
-      "Requirement already satisfied: eval-type-backport in /usr/local/lib/python3.10/dist-packages (from albumentations) (0.2.0)\n",
-      "INFO: pip is still looking at multiple versions of albucore to determine which version is compatible with other requirements. This could take a while.\n",
-      "Collecting albumentations\n",
-      "  Downloading albumentations-1.4.22-py3-none-any.whl.metadata (33 kB)\n",
-      "  Downloading albumentations-1.4.21-py3-none-any.whl.metadata (31 kB)\n",
-      "Collecting albucore==0.0.20 (from albumentations)\n",
-      "  Downloading albucore-0.0.20-py3-none-any.whl.metadata (5.3 kB)\n",
-      "Requirement already satisfied: albucore==0.0.19 in /usr/local/lib/python3.10/dist-packages (from albumentations) (0.0.19)\n",
+      "Collecting simsimd>=5.9.2 (from albucore==0.0.23->albumentations)\n",
+      "  Downloading simsimd-6.2.1-cp310-cp310-manylinux_2_28_x86_64.whl.metadata (66 kB)\n",
       "Requirement already satisfied: matplotlib>=3.3.0 in /usr/local/lib/python3.10/dist-packages (from ultralytics) (3.7.5)\n",
       "Requirement already satisfied: pillow>=7.1.2 in /usr/local/lib/python3.10/dist-packages (from ultralytics) (11.0.0)\n",
       "Requirement already satisfied: requests>=2.23.0 in /usr/local/lib/python3.10/dist-packages (from ultralytics) (2.32.3)\n",
@@ -124,21 +105,20 @@
       "Requirement already satisfied: tcmlib==1.* in /usr/local/lib/python3.10/dist-packages (from tbb==2022.*->mkl->numpy>=1.24.4->albumentations) (1.2.0)\n",
       "Requirement already satisfied: intel-cmplr-lib-rt in /usr/local/lib/python3.10/dist-packages (from mkl_umath->numpy>=1.24.4->albumentations) (2024.2.0)\n",
       "Requirement already satisfied: intel-cmplr-lib-ur==2024.2.0 in /usr/local/lib/python3.10/dist-packages (from intel-openmp>=2024->mkl->numpy>=1.24.4->albumentations) (2024.2.0)\n",
+      "Downloading albumentations-2.0.5-py3-none-any.whl (290 kB)\n",
+      "Downloading albucore-0.0.23-py3-none-any.whl (14 kB)\n",
       "Downloading ultralytics-8.3.104-py3-none-any.whl (994 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m994.1/994.1 kB\u001b[0m \u001b[31m21.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m994.1/994.1 kB\u001b[0m \u001b[31m24.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
       "\u001b[?25hDownloading huggingface_hub-0.30.2-py3-none-any.whl (481 kB)\n",
       "Downloading torchmetrics-1.7.1-py3-none-any.whl (961 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m961.5/961.5 kB\u001b[0m \u001b[31m36.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m961.5/961.5 kB\u001b[0m \u001b[31m26.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
       "\u001b[?25hDownloading lmdb-1.6.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (294 kB)\n",
       "Downloading opencv_python-4.11.0.86-cp37-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (63.0 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m63.0/63.0 MB\u001b[0m \u001b[31m119.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m63.0/63.0 MB\u001b[0m \u001b[31m118.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m\n",
       "\u001b[?25hDownloading ultralytics_thop-2.0.14-py3-none-any.whl (26 kB)\n",
-      "Building wheels for collected packages: PyTurboJPEG\n",
-      "  Building wheel for PyTurboJPEG (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-      "  Created wheel for PyTurboJPEG: filename=PyTurboJPEG-1.7.7-py3-none-any.whl size=12472 sha256=1acf0dc75ed52ff7f4c32b0d3a1694eb17142eb7a1627af28e4814db8d1ff595\n",
-      "  Stored in directory: /root/.cache/pip/wheels/ab/a8/0e/58cad04e5d864697eb8c859071419d7f4a77de7d354fd29088\n",
-      "Successfully built PyTurboJPEG\n",
-      "Installing collected packages: lmdb, huggingface_hub, ultralytics-thop, opencv-python, ultralytics, torchmetrics, PyTurboJPEG\n",
+      "Downloading simsimd-6.2.1-cp310-cp310-manylinux_2_28_x86_64.whl (632 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m632.7/632.7 kB\u001b[0m \u001b[31m20.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: simsimd, lmdb, huggingface_hub, ultralytics-thop, opencv-python, albucore, ultralytics, torchmetrics, albumentations\n",
       "  Attempting uninstall: huggingface_hub\n",
       "    Found existing installation: huggingface-hub 0.29.0\n",
       "    Uninstalling huggingface-hub-0.29.0:\n",
@@ -147,18 +127,26 @@
       "    Found existing installation: opencv-python 4.10.0.84\n",
       "    Uninstalling opencv-python-4.10.0.84:\n",
       "      Successfully uninstalled opencv-python-4.10.0.84\n",
+      "  Attempting uninstall: albucore\n",
+      "    Found existing installation: albucore 0.0.19\n",
+      "    Uninstalling albucore-0.0.19:\n",
+      "      Successfully uninstalled albucore-0.0.19\n",
       "  Attempting uninstall: torchmetrics\n",
       "    Found existing installation: torchmetrics 1.6.1\n",
       "    Uninstalling torchmetrics-1.6.1:\n",
       "      Successfully uninstalled torchmetrics-1.6.1\n",
-      "Successfully installed PyTurboJPEG-1.7.7 huggingface_hub-0.30.2 lmdb-1.6.2 opencv-python-4.11.0.86 torchmetrics-1.7.1 ultralytics-8.3.104 ultralytics-thop-2.0.14\n",
+      "  Attempting uninstall: albumentations\n",
+      "    Found existing installation: albumentations 1.4.20\n",
+      "    Uninstalling albumentations-1.4.20:\n",
+      "      Successfully uninstalled albumentations-1.4.20\n",
+      "Successfully installed albucore-0.0.23 albumentations-2.0.5 huggingface_hub-0.30.2 lmdb-1.6.2 opencv-python-4.11.0.86 simsimd-6.2.1 torchmetrics-1.7.1 ultralytics-8.3.104 ultralytics-thop-2.0.14\n",
       "Cloning into 'ADIS'...\n",
-      "remote: Enumerating objects: 1034, done.\u001b[K\n",
-      "remote: Counting objects: 100% (56/56), done.\u001b[K\n",
-      "remote: Compressing objects: 100% (42/42), done.\u001b[K\n",
-      "remote: Total 1034 (delta 27), reused 40 (delta 13), pack-reused 978 (from 1)\u001b[K\n",
-      "Receiving objects: 100% (1034/1034), 39.59 MiB | 42.32 MiB/s, done.\n",
-      "Resolving deltas: 100% (523/523), done.\n",
+      "remote: Enumerating objects: 1037, done.\u001b[K\n",
+      "remote: Counting objects: 100% (59/59), done.\u001b[K\n",
+      "remote: Compressing objects: 100% (45/45), done.\u001b[K\n",
+      "remote: Total 1037 (delta 29), reused 41 (delta 13), pack-reused 978 (from 1)\u001b[K\n",
+      "Receiving objects: 100% (1037/1037), 39.60 MiB | 37.68 MiB/s, done.\n",
+      "Resolving deltas: 100% (525/525), done.\n",
       "Creating new Ultralytics Settings v0.0.6 file ✅ \n",
       "View Ultralytics Settings with 'yolo settings' or at '/root/.config/Ultralytics/settings.json'\n",
       "Update Settings with 'yolo settings key=value', i.e. 'yolo settings runs_dir=path/to/dir'. For help see https://docs.ultralytics.com/quickstart/#ultralytics-settings.\n"
@@ -167,7 +155,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9bb0d5ba68574e54bc5c0019a69e52e2",
+       "model_id": "ce442c1a7ab9490eb3bae4d7dbad5d5b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -182,7 +170,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Unzipping: 100%|██████████| 7.07G/7.07G [00:42<00:00, 168MB/s]\n"
+      "Unzipping: 100%|██████████| 7.07G/7.07G [00:47<00:00, 149MB/s]\n"
      ]
     },
     {
@@ -195,7 +183,7 @@
    ],
    "source": [
     "!pip install --upgrade pip\n",
-    "!pip install -U albumentations ultralytics huggingface_hub torchmetrics lmdb PyTurboJPEG opencv-python\n",
+    "!pip install -U albumentations ultralytics huggingface_hub torchmetrics lmdb msgpack opencv-python \n",
     "!git clone https://github.com/sathishkumar67/ADIS.git\n",
     "!mv /kaggle/working/ADIS/* /kaggle/working/\n",
     "\n",
@@ -230,12 +218,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from typing import Tuple\n",
     "from tqdm import tqdm\n",
+    "import msgpack\n",
     "import os\n",
     "import cv2\n",
     "from PIL import Image\n",
@@ -262,7 +251,7 @@
    "outputs": [],
    "source": [
     "class SSDLITEOBJDET_DATASET(Dataset):\n",
-    "    def __init__(self, root_dir: str, split: str, num_classes: int, img_size: int=320, dtype: torch.dtype=torch.float32, mode: str=\"train\") -> None:\n",
+    "    def __init__(self, root_dir: str, split: str, num_classes: int, img_size: int=320, dtype: torch.dtype=torch.float16, mode: str=\"train\") -> None:\n",
     "        super().__init__()\n",
     "        self.root_dir, self.split, self.img_size, self.num_classes = root_dir, split.lower(), img_size, num_classes\n",
     "        self.current_dir = os.path.join(self.root_dir, self.split)\n",
@@ -364,9 +353,9 @@
     "            \n",
     "        # Handle empty labels after all filtering\n",
     "        if len(valid_boxes) == 0:\n",
-    "            return image, {\n",
+    "            return image.to(self.dtype), {\n",
     "                'boxes': torch.tensor([[0.0, 0.0, 1.0, 1.0]], dtype=self.dtype),\n",
-    "                'labels': torch.zeros(0, dtype=torch.int8)\n",
+    "                'labels': torch.zeros(0, dtype=torch.uint8)\n",
     "            }\n",
     "        else:    \n",
     "            # Scale boxes\n",
@@ -374,9 +363,9 @@
     "            boxes = torch.tensor(valid_boxes) * torch.tensor([scale_x, scale_y, scale_x, scale_y])\n",
     "            target = {\n",
     "                'boxes': self.normalize(boxes).to(self.dtype) if self.mode == \"train\" else boxes.to(self.dtype),\n",
-    "                'labels': torch.tensor(valid_labels, dtype=torch.int8)\n",
+    "                'labels': torch.tensor(valid_labels, dtype=torch.uint8)\n",
     "            }\n",
-    "            return image, target\n",
+    "            return image.to(self.dtype), target\n",
     "        \n",
     "    def normalize(self, boxes: torch.Tensor) -> torch.Tensor:\n",
     "        # Normalize boxes to [0, 1] range\n",
@@ -422,8 +411,7 @@
     "    targets = []\n",
     "\n",
     "    # Separate images and targets from the input batch list\n",
-    "    for sample in batch:\n",
-    "        image_tensor, target_dict = sample\n",
+    "    for image_tensor, target_dict in batch:\n",
     "        images.append(image_tensor)\n",
     "        targets.append(target_dict)\n",
     "\n",
@@ -434,14 +422,29 @@
     "    # The targets remain as a list of dictionaries\n",
     "    # The object detection model's forward pass or the loss function\n",
     "    # will typically iterate through this list.\n",
-    "    targets_list = targets\n",
-    "\n",
-    "    return images_batch, targets_list"
+    "    # Each dictionary in the list corresponds to an image in the batch.\n",
+    "    return images_batch, targets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_dataset = SSDLITEOBJDET_DATASET(\n",
+    "    root_dir=DATASET_FOLDER_PATH,\n",
+    "    split=\"val\",\n",
+    "    num_classes=NUM_CLASSES,\n",
+    "    img_size=320,\n",
+    "    dtype=torch.float16,\n",
+    "    mode=\"eval\"\n",
+    ")    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,8 +477,14 @@
     "\n",
     "    def __getitem__(self, idx):\n",
     "        with self.env.begin() as txn:\n",
-    "            data = txn.get(str(idx).encode())\n",
-    "        return pickle.loads(data)\n",
+    "            data = msgpack.unpackb(txn.get(str(idx).encode()))\n",
+    "        img = torch.frombuffer(data[0], dtype=self.dtype).view(3, self.img_size, self.img_size) # channnels = 3 because of RGB\n",
+    "        boxes = torch.frombuffer(data[1], dtype=self.dtype).view(-1, 4)\n",
+    "        labels = torch.frombuffer(data[2], dtype=torch.uint8).view(-1)\n",
+    "        return img, {'boxes': boxes, 'labels': labels}\n",
+    "\n",
+    "            # data = txn.get(str(idx).encode())\n",
+    "        # return pickle.loads(data)\n",
     "    \n",
     "    def preprocess_dataset(self) -> None:\n",
     "        dataset = self.dataset_class(self.root_dir, self.split, self.num_classes, self.img_size, self.dtype, self.mode)\n",
@@ -485,12 +494,61 @@
     "            for idx in tqdm(range(len(dataset))):\n",
     "                image, target = dataset[idx]\n",
     "                # Serialize and store\n",
-    "                txn.put(\n",
-    "                    str(idx).encode(),\n",
-    "                    pickle.dumps((image, target))\n",
-    "                )\n",
+    "                # txn.put(\n",
+    "                #     str(idx).encode(),\n",
+    "                #     pickle.dumps((image, target))\n",
+    "                # )\n",
+    "                # serialize with msgpack (faster than pickle)\n",
+    "                txn.put(str(idx).encode(), msgpack.packb((\n",
+    "                image.numpy().tobytes(),\n",
+    "                target['boxes'].numpy().tobytes(),\n",
+    "                target['labels'].numpy().tobytes()\n",
+    "            )))\n",
     "        shutil.rmtree(os.path.join(self.root_dir, self.split))\n",
     "        del dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from concurrent.futures import ThreadPoolExecutor\n",
+    "\n",
+    "class AsyncPrefetcher:\n",
+    "    def __init__(self, dataloader):\n",
+    "        self.dataloader = dataloader\n",
+    "        self.pool = ThreadPoolExecutor(max_workers=4)\n",
+    "        self.futures = []\n",
+    "        \n",
+    "    def __iter__(self):\n",
+    "        # Prefetch next 4 batches\n",
+    "        for _ in range(4):\n",
+    "            self.futures.append(self.pool.submit(next, self.dataloader))\n",
+    "        while True:\n",
+    "            yield self.futures.pop(0).result()\n",
+    "            self.futures.append(self.pool.submit(next, self.dataloader))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2\n",
+    "\n",
+    "# Bypass CPU copy using NVIDIA Magnum IO\n",
+    "torch.utils.data.DataLoader(..., direct_io=True)\n",
+    "\n",
+    "# Mount filesystem with GPU Direct support\n",
+    "mount -t gpfs /dev/nvme0n1 /datasets\n",
+    "\n",
+    "# fused batch collation\n",
+    "@torch.jit.script\n",
+    "def collate_fn(batch):\n",
+    "    images = [item[0] for item in batch]\n",
+    "    targets = [item[1] for item in batch]\n",
+    "    return torch.stack(images, dim=0, memory_format=torch.channels_last), targets"
    ]
   },
   {
