reverted back to previous version

--- a/ssd_model_training.ipynb
+++ b/ssd_model_training.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
       "Collecting pip\n",
       "  Downloading pip-25.0.1-py3-none-any.whl.metadata (3.7 kB)\n",
       "Downloading pip-25.0.1-py3-none-any.whl (1.8 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m21.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m0:01\u001b[0m\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m24.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
       "\u001b[?25hInstalling collected packages: pip\n",
       "  Attempting uninstall: pip\n",
       "    Found existing installation: pip 24.1.2\n",
@@ -33,7 +33,7 @@
       "Collecting albumentations\n",
       "  Downloading albumentations-2.0.5-py3-none-any.whl.metadata (41 kB)\n",
       "Collecting ultralytics\n",
-      "  Downloading ultralytics-8.3.104-py3-none-any.whl.metadata (37 kB)\n",
+      "  Downloading ultralytics-8.3.105-py3-none-any.whl.metadata (37 kB)\n",
       "Requirement already satisfied: huggingface_hub in /usr/local/lib/python3.10/dist-packages (0.29.0)\n",
       "Collecting huggingface_hub\n",
       "  Downloading huggingface_hub-0.30.2-py3-none-any.whl.metadata (13 kB)\n",
@@ -107,17 +107,17 @@
       "Requirement already satisfied: intel-cmplr-lib-ur==2024.2.0 in /usr/local/lib/python3.10/dist-packages (from intel-openmp>=2024->mkl->numpy>=1.24.4->albumentations) (2024.2.0)\n",
       "Downloading albumentations-2.0.5-py3-none-any.whl (290 kB)\n",
       "Downloading albucore-0.0.23-py3-none-any.whl (14 kB)\n",
-      "Downloading ultralytics-8.3.104-py3-none-any.whl (994 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m994.1/994.1 kB\u001b[0m \u001b[31m24.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "Downloading ultralytics-8.3.105-py3-none-any.whl (994 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m994.0/994.0 kB\u001b[0m \u001b[31m26.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
       "\u001b[?25hDownloading huggingface_hub-0.30.2-py3-none-any.whl (481 kB)\n",
       "Downloading torchmetrics-1.7.1-py3-none-any.whl (961 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m961.5/961.5 kB\u001b[0m \u001b[31m26.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m961.5/961.5 kB\u001b[0m \u001b[31m44.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
       "\u001b[?25hDownloading lmdb-1.6.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (294 kB)\n",
       "Downloading opencv_python-4.11.0.86-cp37-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (63.0 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m63.0/63.0 MB\u001b[0m \u001b[31m118.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m63.0/63.0 MB\u001b[0m \u001b[31m125.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m\n",
       "\u001b[?25hDownloading ultralytics_thop-2.0.14-py3-none-any.whl (26 kB)\n",
       "Downloading simsimd-6.2.1-cp310-cp310-manylinux_2_28_x86_64.whl (632 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m632.7/632.7 kB\u001b[0m \u001b[31m20.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m632.7/632.7 kB\u001b[0m \u001b[31m24.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
       "\u001b[?25hInstalling collected packages: simsimd, lmdb, huggingface_hub, ultralytics-thop, opencv-python, albucore, ultralytics, torchmetrics, albumentations\n",
       "  Attempting uninstall: huggingface_hub\n",
       "    Found existing installation: huggingface-hub 0.29.0\n",
@@ -139,14 +139,14 @@
       "    Found existing installation: albumentations 1.4.20\n",
       "    Uninstalling albumentations-1.4.20:\n",
       "      Successfully uninstalled albumentations-1.4.20\n",
-      "Successfully installed albucore-0.0.23 albumentations-2.0.5 huggingface_hub-0.30.2 lmdb-1.6.2 opencv-python-4.11.0.86 simsimd-6.2.1 torchmetrics-1.7.1 ultralytics-8.3.104 ultralytics-thop-2.0.14\n",
+      "Successfully installed albucore-0.0.23 albumentations-2.0.5 huggingface_hub-0.30.2 lmdb-1.6.2 opencv-python-4.11.0.86 simsimd-6.2.1 torchmetrics-1.7.1 ultralytics-8.3.105 ultralytics-thop-2.0.14\n",
       "Cloning into 'ADIS'...\n",
-      "remote: Enumerating objects: 1037, done.\u001b[K\n",
-      "remote: Counting objects: 100% (59/59), done.\u001b[K\n",
-      "remote: Compressing objects: 100% (45/45), done.\u001b[K\n",
-      "remote: Total 1037 (delta 29), reused 41 (delta 13), pack-reused 978 (from 1)\u001b[K\n",
-      "Receiving objects: 100% (1037/1037), 39.60 MiB | 37.68 MiB/s, done.\n",
-      "Resolving deltas: 100% (525/525), done.\n",
+      "remote: Enumerating objects: 1040, done.\u001b[K\n",
+      "remote: Counting objects: 100% (62/62), done.\u001b[K\n",
+      "remote: Compressing objects: 100% (46/46), done.\u001b[K\n",
+      "remote: Total 1040 (delta 31), reused 44 (delta 15), pack-reused 978 (from 1)\u001b[K\n",
+      "Receiving objects: 100% (1040/1040), 39.60 MiB | 38.80 MiB/s, done.\n",
+      "Resolving deltas: 100% (527/527), done.\n",
       "Creating new Ultralytics Settings v0.0.6 file ✅ \n",
       "View Ultralytics Settings with 'yolo settings' or at '/root/.config/Ultralytics/settings.json'\n",
       "Update Settings with 'yolo settings key=value', i.e. 'yolo settings runs_dir=path/to/dir'. For help see https://docs.ultralytics.com/quickstart/#ultralytics-settings.\n"
@@ -155,7 +155,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ce442c1a7ab9490eb3bae4d7dbad5d5b",
+       "model_id": "98d70e4c94c745038b27f7444d7b91d3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -170,7 +170,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Unzipping: 100%|██████████| 7.07G/7.07G [00:47<00:00, 149MB/s]\n"
+      "Unzipping: 100%|██████████| 7.07G/7.07G [00:42<00:00, 165MB/s]\n"
      ]
     },
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,6 +227,9 @@
     "import msgpack\n",
     "import os\n",
     "import cv2\n",
+    "import lmdb\n",
+    "import pickle\n",
+    "import shutil\n",
     "from PIL import Image\n",
     "from functools import partial\n",
     "import torch\n",
@@ -238,10 +241,7 @@
     "from torchvision.models.detection.ssdlite import SSDLiteClassificationHead\n",
     "from torchvision.models.detection import _utils as det_utils\n",
     "from torchmetrics.detection import MeanAveragePrecision\n",
-    "from typing import List, Tuple, Dict, Any # Import necessary types\n",
-    "import lmdb\n",
-    "import pickle\n",
-    "import shutil"
+    "from typing import List, Tuple, Dict, Any # Import necessary types"
    ]
   },
   {
