--- a/ssd_model_training.ipynb
+++ b/ssd_model_training.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
       "Collecting pip\n",
       "  Downloading pip-25.0.1-py3-none-any.whl.metadata (3.7 kB)\n",
       "Downloading pip-25.0.1-py3-none-any.whl (1.8 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m24.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m23.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
       "\u001b[?25hInstalling collected packages: pip\n",
       "  Attempting uninstall: pip\n",
       "    Found existing installation: pip 24.1.2\n",
@@ -108,16 +108,16 @@
       "Downloading albumentations-2.0.5-py3-none-any.whl (290 kB)\n",
       "Downloading albucore-0.0.23-py3-none-any.whl (14 kB)\n",
       "Downloading ultralytics-8.3.105-py3-none-any.whl (994 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m994.0/994.0 kB\u001b[0m \u001b[31m26.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m994.0/994.0 kB\u001b[0m \u001b[31m20.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
       "\u001b[?25hDownloading huggingface_hub-0.30.2-py3-none-any.whl (481 kB)\n",
       "Downloading torchmetrics-1.7.1-py3-none-any.whl (961 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m961.5/961.5 kB\u001b[0m \u001b[31m44.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m961.5/961.5 kB\u001b[0m \u001b[31m32.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
       "\u001b[?25hDownloading lmdb-1.6.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (294 kB)\n",
       "Downloading opencv_python-4.11.0.86-cp37-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (63.0 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m63.0/63.0 MB\u001b[0m \u001b[31m125.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m63.0/63.0 MB\u001b[0m \u001b[31m111.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
       "\u001b[?25hDownloading ultralytics_thop-2.0.14-py3-none-any.whl (26 kB)\n",
       "Downloading simsimd-6.2.1-cp310-cp310-manylinux_2_28_x86_64.whl (632 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m632.7/632.7 kB\u001b[0m \u001b[31m24.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m632.7/632.7 kB\u001b[0m \u001b[31m15.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
       "\u001b[?25hInstalling collected packages: simsimd, lmdb, huggingface_hub, ultralytics-thop, opencv-python, albucore, ultralytics, torchmetrics, albumentations\n",
       "  Attempting uninstall: huggingface_hub\n",
       "    Found existing installation: huggingface-hub 0.29.0\n",
@@ -141,12 +141,12 @@
       "      Successfully uninstalled albumentations-1.4.20\n",
       "Successfully installed albucore-0.0.23 albumentations-2.0.5 huggingface_hub-0.30.2 lmdb-1.6.2 opencv-python-4.11.0.86 simsimd-6.2.1 torchmetrics-1.7.1 ultralytics-8.3.105 ultralytics-thop-2.0.14\n",
       "Cloning into 'ADIS'...\n",
-      "remote: Enumerating objects: 1040, done.\u001b[K\n",
-      "remote: Counting objects: 100% (62/62), done.\u001b[K\n",
-      "remote: Compressing objects: 100% (46/46), done.\u001b[K\n",
-      "remote: Total 1040 (delta 31), reused 44 (delta 15), pack-reused 978 (from 1)\u001b[K\n",
-      "Receiving objects: 100% (1040/1040), 39.60 MiB | 38.80 MiB/s, done.\n",
-      "Resolving deltas: 100% (527/527), done.\n",
+      "remote: Enumerating objects: 1043, done.\u001b[K\n",
+      "remote: Counting objects: 100% (65/65), done.\u001b[K\n",
+      "remote: Compressing objects: 100% (49/49), done.\u001b[K\n",
+      "remote: Total 1043 (delta 33), reused 45 (delta 15), pack-reused 978 (from 1)\u001b[K\n",
+      "Receiving objects: 100% (1043/1043), 39.60 MiB | 39.49 MiB/s, done.\n",
+      "Resolving deltas: 100% (529/529), done.\n",
       "Creating new Ultralytics Settings v0.0.6 file ✅ \n",
       "View Ultralytics Settings with 'yolo settings' or at '/root/.config/Ultralytics/settings.json'\n",
       "Update Settings with 'yolo settings key=value', i.e. 'yolo settings runs_dir=path/to/dir'. For help see https://docs.ultralytics.com/quickstart/#ultralytics-settings.\n"
@@ -155,7 +155,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "98d70e4c94c745038b27f7444d7b91d3",
+       "model_id": "dcdd2818abb94a19af4e618911cea8dc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -170,7 +170,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Unzipping: 100%|██████████| 7.07G/7.07G [00:42<00:00, 165MB/s]\n"
+      "Unzipping: 100%|██████████| 7.07G/7.07G [00:41<00:00, 169MB/s]\n"
      ]
     },
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,12 +246,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 46.0000,  34.0000, 137.0000, 158.5000]])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.randint(0, 320, (1, 4))/2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "class SSDLITEOBJDET_DATASET(Dataset):\n",
-    "    def __init__(self, root_dir: str, split: str, num_classes: int, img_size: int=320, dtype: torch.dtype=torch.float16, mode: str=\"train\") -> None:\n",
+    "    def __init__(self, root_dir: str, split: str, num_classes: int, img_size: int=320, dtype: torch.dtype=torch.float32, mode: str=\"train\") -> None:\n",
     "        super().__init__()\n",
     "        self.root_dir, self.split, self.img_size, self.num_classes = root_dir, split.lower(), img_size, num_classes\n",
     "        self.current_dir = os.path.join(self.root_dir, self.split)\n",
@@ -276,27 +296,16 @@
     "        \n",
     "        # get image and label files\n",
     "        self.image_files = sorted(\n",
-    "            [f for f in os.listdir(self.current_dir) if f.lower().endswith(('.jpg', '.jpeg', '.png'))],\n",
+    "            [os.path.join(self.current_dir, f) for f in os.listdir(self.current_dir) if f.lower().endswith(('.jpg', '.jpeg', '.png'))],\n",
     "            key=lambda x: os.path.splitext(x)[0]\n",
     "        )\n",
-    "        self.label_files = [os.path.splitext(f)[0] + '.txt' for f in self.image_files]\n",
+    "        self.label_files = [os.path.join(self.current_dir, os.path.splitext(f)[0] + '.txt') for f in self.image_files]\n",
     "\n",
     "        # Validate existence for ALL label files\n",
     "        for img_file, lbl_file in zip(self.image_files, self.label_files):\n",
-    "            if not os.path.exists(os.path.join(self.current_dir, lbl_file)):\n",
+    "            if not os.path.exists(lbl_file):\n",
     "                raise FileNotFoundError(f\"Label file missing for {img_file}\")\n",
-    "            elif not os.path.exists(os.path.join(self.current_dir, img_file)):\n",
-    "                raise FileNotFoundError(f\"Image file missing for {lbl_file}\")\n",
-    "        \n",
-    "        # get image and label file paths\n",
-    "        self.image_files = [os.path.join(self.current_dir, f) for f in self.image_files]\n",
-    "        self.label_files = [os.path.join(self.current_dir, f) for f in self.label_files]\n",
-    "        \n",
-    "        # check pair mismatches\n",
-    "        for img_file, lbl_file in zip(self.image_files, self.label_files):\n",
-    "            if os.path.splitext(img_file)[0] != os.path.splitext(lbl_file)[0]:\n",
-    "                raise ValueError(f\"Image and label file names do not match: {img_file} and {lbl_file}\")\n",
-    "            \n",
+    "\n",
     "    def __len__(self) -> int:\n",
     "        # print the no of items in the dataset\n",
     "        print(f\"Number of items in the dataset: {len(self.image_files)}\")\n",
@@ -309,10 +318,8 @@
     "        image = cv2.imread(img_path)\n",
     "        image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
     "        orig_width, orig_height, _ = image.shape\n",
-    "        image = cv2.resize(image, (self.img_size, self.img_size), interpolation=self.interpolation)\n",
-    "        \n",
-    "        # Convert image to tensor, normalize to [0, 1], then to required dtype\n",
-    "        image = TF.to_tensor(image)\n",
+    "        # tensor with uint8 datatype \n",
+    "        image = torch.tensor(cv2.resize(image, (self.img_size, self.img_size), interpolation=self.interpolation)).view(3, self.img_size, self.img_size)\n",
     "        \n",
     "        # In label parsing\n",
     "        valid_boxes = []\n",
@@ -353,19 +360,20 @@
     "            \n",
     "        # Handle empty labels after all filtering\n",
     "        if len(valid_boxes) == 0:\n",
-    "            return image.to(self.dtype), {\n",
+    "            return image, {\n",
     "                'boxes': torch.tensor([[0.0, 0.0, 1.0, 1.0]], dtype=self.dtype),\n",
     "                'labels': torch.zeros(0, dtype=torch.uint8)\n",
     "            }\n",
     "        else:    \n",
     "            # Scale boxes\n",
     "            scale_x, scale_y = self.img_size / orig_width, self.img_size / orig_height\n",
-    "            boxes = torch.tensor(valid_boxes) * torch.tensor([scale_x, scale_y, scale_x, scale_y])\n",
+    "            boxes = torch.tensor(valid_boxes, dtype=self.dtype) * torch.tensor([scale_x, scale_y, scale_x, scale_y], dtype=self.dtype)\n",
+    "            labels = torch.tensor(valid_labels, dtype=torch.uint8)\n",
     "            target = {\n",
-    "                'boxes': self.normalize(boxes).to(self.dtype) if self.mode == \"train\" else boxes.to(self.dtype),\n",
-    "                'labels': torch.tensor(valid_labels, dtype=torch.uint8)\n",
+    "                'boxes': self.normalize(boxes) if self.mode == \"train\" else boxes,\n",
+    "                'labels': labels\n",
     "            }\n",
-    "            return image.to(self.dtype), target\n",
+    "            return image, target\n",
     "        \n",
     "    def normalize(self, boxes: torch.Tensor) -> torch.Tensor:\n",
     "        # Normalize boxes to [0, 1] range\n",
@@ -428,7 +436,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.4801, 0.1160, 0.6582, 0.0572, 0.7597])"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# geneate random tensor between 0 and 1\n",
+    "a = torch.rand(5)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.4688, 0.1172, 0.6875, 0.0586, 0.7500], dtype=torch.float8_e4m3fn)"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.to(torch.float8_e4m3fn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.4688, 0.1172, 0.6875, 0.0586, 0.7500], dtype=torch.float8_e4m3fnuz)"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.to(torch.float8_e4m3fnuz)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.5000, 0.1094, 0.6250, 0.0547, 0.7500], dtype=torch.float8_e5m2)"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.to(torch.float8_e5m2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.5000, 0.1094, 0.6250, 0.0547, 0.7500], dtype=torch.float8_e5m2fnuz)"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.to(torch.float8_e5m2fnuz)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.6149, 0.7857, 0.8543, 0.5568, 0.6772])"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# geneate random tensor between 0 and 1\n",
+    "a = torch.rand(5)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,6 +572,97 @@
     "    dtype=torch.float16,\n",
     "    mode=\"eval\"\n",
     ")    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'boxes': tensor([[0.1498, 0.1399, 0.8779, 0.9795]], dtype=torch.float16),\n",
+       " 'labels': tensor([1], dtype=torch.uint8)}"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img, target = val_dataset[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.1498, 0.1399, 0.8779, 0.9795]], dtype=torch.float16)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target[\"boxes\"]/320"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'boxes': tensor([[ 47.9375,  44.7812, 281.0000, 313.5000]], dtype=torch.float16),\n",
+       " 'labels': tensor([1], dtype=torch.uint8)}"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([3, 320, 320]), torch.uint8)"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img.shape, img.dtype"
    ]
   },
   {
