--- a/ssd_model_training.ipynb
+++ b/ssd_model_training.ipynb
@@ -692,8 +692,7 @@
     "    \n",
     "    def denormalize(self, boxes: torch.Tensor) -> torch.Tensor:\n",
     "        # Denormalize boxes to original size\n",
-    "        return boxes * self.img_size\n",
-    "    \n"
+    "        return boxes * self.img_size"
    ]
   },
   {
@@ -744,17 +743,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "from torch.utils.data import DataLoader\n",
-    "train_loader = DataLoader(train_dataset, batch_size=16, shuffle=True, drop_last=True, collate_fn=collate_fn)"
+    "train_loader = DataLoader(test_dataset, batch_size=16, shuffle=True, drop_last=True, collate_fn=collate_fn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -763,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
